# checkit

./: .gitignore  README.md  pyproject.toml
checkit/: main.py
checkit/scripts/: check_backups.py
checkit/utils/: config.py  notification.py
config/: backup_schedules.json.sample
scripts/: checkit.plist.sample  run_checkit.sh
